--- a/index.html
+++ b/index.html
@@ -493,9 +493,9 @@
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://afterparty.solutions/'"
+                  onclick="location.href='https://github.com/Minahhh666/After_Party'"
                 >
-                  Website
+                  Github
                 </button>
               </div>
             </div>
