--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/Minahhh666/After_Party'"
+                  onclick="location.href='http://afterparty.work/'"
                 >
                   Github
                 </button>
