--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                   class="btn btn-color-2 project-btn"
                   onclick="location.href='http://afterparty.work/'"
                 >
-                  Github
+                  Website
                 </button>
               </div>
             </div>
